--- a/front/src/styles/HeroSection.css
+++ b/front/src/styles/HeroSection.css
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: #343a40;
   padding: 0 20px;
 }
 
